Bug 148993 - Calc - formula error since version 7.3
Summary: Calc - formula error since version 7.3
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.3.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0 target:7.3.4
Keywords: bibisected, bisected, regression
: 149125 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-05-09 09:10 UTC by kabilo
Modified: 2022-05-27 10:45 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
a sample file (6.00 KB, application/vnd.ms-excel)
2022-05-09 09:11 UTC, kabilo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description kabilo 2022-05-09 09:10:47 UTC
Description:
A workbook with formulas created in LO 7.3 and saved in xls format cannot be opened correctly in MSO (Excel 2013). In LO the formulas work correctly.

Steps to Reproduce:
1. Open the attached file in MSO.
2.
3.

Actual Results:
error when opening the file, formula is not calculated correctly

Expected Results:
repairs


Reproducible: Always


User Profile Reset: Yes


OpenGL enabled: Yes

Additional Info:
Comment 1 kabilo 2022-05-09 09:11:47 UTC
Created attachment 180008 [details]
a sample file
Comment 2 Mike Kaganski 2022-05-09 10:15:48 UTC
Regression after commit 12ee423c7549ddd2b86dfc3fc6fed2c617dcca7f
  Author Balazs Varga <balazs.varga991@gmail.com>
  Date   Mon Sep 13 12:17:37 2021 +0200
    tdf#144397 tdf#144636 XLSX: cache external named ranges and their formulas
Comment 3 Commit Notification 2022-05-09 17:02:19 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ac9de05cc79e76392891c18814e8f120178ccf38

tdf#148993 XLS export: fix broken formula regression

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2022-05-10 07:10:20 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/4500514571e389dec40f90d9d40dc568d5e4c490

tdf#148993 XLS export: fix broken formula regression

It will be available in 7.3.4.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 LPC 2022-05-18 10:44:08 UTC
*** Bug 149125 has been marked as a duplicate of this bug. ***
Comment 6 NISZ LibreOffice Team 2022-05-27 10:45:30 UTC
Verified in:

Version: 7.4.0.0.alpha1+ (x64) / LibreOffice Community
Build ID: b6266207b55a7633dc82b02142215757512adfb7
CPU threads: 8; OS: Windows 10.0 Build 19042; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: CL