tdf#148993 XLS export: fix broken formula

Regression from commit 12ee423c7549ddd2b86dfc3fc6fed2c617dcca7f
"tdf#144397 tdf#144636 XLSX: cache external named ranges and their formulas".

Change-Id: I009630a41b29bb21349711cc07d0ed181f816374