sc/source/filter/excel/xeformula.cxx
@@ -611,7 +611,9 @@ void XclExpFmlaCompImpl::Init( XclFormulaType eType, const ScTokenArray& rScTokA
         // token array iterator (use cloned token array if present)
         mxData->maTokArrIt.Init( mxData->mxOwnScTokArr ? *mxData->mxOwnScTokArr : rScTokArr, false );
         mxData->mpRefLog = pRefLog;
-        mxData->mpScBasePos = pScBasePos;
+        // Only for OOXML
+        if (GetOutput() == EXC_OUTPUT_XML_2007)
+            mxData->mpScBasePos = pScBasePos;
     }
 }
 
